[package]
name = "todo-or-boom"
version = "0.1.0"
edition = "2021"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/oknozor/todo-or-boom"
categories = ["command-line-utilities", "development-tools"]
description = """todo-or-boom, a todos and fixme linter."""

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
ignore = "0.4.22"
globset = "0.4.14"
anyhow = "1.0.75"
pest = "2.7.5"
pest_derive = "2.7.5"
miette = { version = "5.5.0", features = ["fancy"] }
owo-colors = "4.0.0"
thiserror = "1.0.50"
